# iw

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEMO.md  LICENSE  README.md  SERVICES.md  TROUBLESHOOTING.md  WALKTHROUGH.md  iw.py  justfile  ruff.toml
engine/: pyproject.toml
engine/docs/: 01-design-architecture.html  02-data-model.html  02-incident-use-cases.html  03-capability-integration.html  03-projections-and-data.html  04-incident-use-cases.html  05-capability-integration.html  GRAPH-MODEL-REFINEMENT.md  REFACTOR-PLAN.md  index.html
engine/scripts/: build_demo.py  gen_golden.py  run_live.py
engine/src/iw_engine/: __init__.py
engine/tests/e2e/: _helpers.py  scenario_cache.py  scenario_certificate.py  scenario_code_regression.py  scenario_correlated.py  scenario_database.py  scenario_deployment.py  scenario_featureflag.py  scenario_firewall.py  scenario_infra.py  scenario_messaging.py  scenario_network.py  scenario_nochange.py  test_bundle_journal.py  test_cache.py  test_certificate.py  test_correlate.py  test_correlated.py  test_database.py  test_deployment.py  test_discovered_layer.py  test_e2e.py  test_featureflag.py  test_firewall.py  test_golden.py  test_network.py  test_nochange.py  test_persistence.py  test_scenarios.py
engine/tests/unit/: test_assertion.py  test_assertion_store.py  test_belief.py  test_cap_appd.py  test_cap_artifactory.py  test_cap_cmdb.py  test_cap_git.py  test_cap_ocp.py  test_cap_registry.py  test_cap_servicenow.py  test_cap_splunk.py  test_capability.py  test_controller.py  test_dictionary.py  test_discovery_counters.py  test_doctrine.py  test_edge_belief.py  test_edge_symmetry.py  test_edge_taxonomy.py  test_error_honesty.py  test_fold_ladder.py  test_graph_tools.py  test_identity_resolution.py  test_iw_cli.py  test_journal_capture.py  test_journal_v2.py  test_live_seam.py  test_llm_client.py  test_mapping.py  test_node_props.py  test_phase_review.py  test_planner_todos.py  test_projection.py  test_quarantine.py  test_reasoned_invocation.py  test_reducer.py  test_reify.py  test_reject_repair_journal.py  test_rejections.py  test_session.py  (+7 more)
legacy/: .env.example  ARCHITECTURE.md  old-lunasre-ci.yml  pyproject.toml  pyrightconfig.json
legacy/demo/: README-live.md  README.md  copilot-instructions.md  graph-schema.json  phases-journey-design-brief.md  quick-demo (INC-2256).webloc  run-live.sh  start-demo.command  step-schema.json  validate.py  viewer.html
legacy/demo/.claude/: launch.json
legacy/demo/incidents/: INC-2207.json  INC-2256.json  INC-2290.json  INC-3187.json  INC-4821.json  INC-DEMO.json  INC-LIVE.json
legacy/frontend/: index.html
legacy/governance/: owasp-agentic-checklist.md
legacy/implementation/: IMPLEMENTATION-PLAN.md  README-demo.md  run-demo.sh
legacy/implementation/engine-backend/: README.md  pyproject.toml
legacy/implementation/workbench-ui/: README.md  index.html  package-lock.json  package.json
legacy/infra/: litellm_config.yaml
legacy/infra/registries/: agent_registry.yaml  mcp_registry.yaml
legacy/mock_data/: alerts.json
legacy/scripts/: pilot.sh
legacy/tests/: test_a2a_server.py  test_governance_identity.py  test_graph_build.py  test_hitl.py  test_memory.py  test_registries.py  test_traces_pg.py  test_web.py
(+343 files in other folders)
