[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-engine"
version = "0.1.0"
description = "Governed, domain-neutral incident-triage investigation engine — backend."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "networkx>=3.0",
  "pyyaml>=6.0",
  "langgraph>=0.2",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "openai>=1.40",
  "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27"]
# added per phase: networkx (P2) · langgraph + langgraph-checkpoint-postgres (P4) · fastapi + uvicorn (P6)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
